2010-08-17  Ojan Vafai  <ojan@chromium.org>

Reviewed by Tony Chang.

        selectionStart clobbered if textarea isn't focused
        https://bugs.webkit.org/show_bug.cgi?id=43814

        * fast/forms/text-control-select-blurred-expected.txt: Added.
        * fast/forms/text-control-select-blurred.html: Added.
2010-08-17  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Tony Chang.

        selectionStart clobbered if textarea isn't focused
        https://bugs.webkit.org/show_bug.cgi?id=43814

        If a text control is blurred, setting selectionStart/end should use
        the cached selection value, which is currently stored on the form
        control element.

        Test: fast/forms/text-control-select-blurred.html

        * rendering/RenderTextControl.cpp:
        (WebCore::RenderTextControl::setSelectionStart):
        (WebCore::RenderTextControl::setSelectionEnd):

Canonical link: https://commits.webkit.org/56348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65564 268f45cc-cd09-0410-ab3c-d52691b4dbfc